--- a/src/app/templates/components/about/about.component.css
+++ b/src/app/templates/components/about/about.component.css
@@ -1,5 +1,5 @@
 .about-container {
-  background-image: url('/assets/images/backgrounds/cloud.png');
+  background-image: url("/assets/images/backgrounds/cloud.png");
   background-size: cover;
   padding: 120px 100px;
   box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
@@ -33,7 +33,7 @@
 }
 
 p {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .about-text {
@@ -66,5 +66,31 @@ p {
 
   .about-text {
     width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  @media (orientation: landscape) {
+    .about-container {
+      padding: 20px;
+    }
+
+    .about-content {
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .about-image {
+      width: 100%;
+    }
+
+    .about-image img {
+      width: 100%;
+    }
+
+    .about-text {
+      width: 100%;
+    }
   }
 }
