--- a/src/app/templates/components/confirmation-modal/confirmation-modal.component.css
+++ b/src/app/templates/components/confirmation-modal/confirmation-modal.component.css
@@ -92,3 +92,9 @@
   font-weight: bold;
   font-size: 1.2em;
 }
+
+@media (max-width: 768px) {
+  .confirmation-modal-content {
+    width: 80%;
+  }
+}
