--- a/src/app/templates/components/github-stats/github-stats.component.css
+++ b/src/app/templates/components/github-stats/github-stats.component.css
@@ -359,7 +359,7 @@
 }
 
 h2 {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 2.5rem;
 }
 
@@ -402,8 +402,12 @@ h2 {
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes floatUpDown {
@@ -465,9 +469,21 @@ h2 {
   }
 }
 
+@media (max-width: 1024px) {
+  @media (orientation: landscape) {
+    .github-stats-info {
+      display: none;
+    }
+  }
+}
+
 @media screen and (min-aspect-ratio: 16/9) {
   .github-stats-container {
     gap: 100px;
     padding: 80px 120px;
+  }
+
+  .github-stats-container {
+    padding: 40px 60px;
   }
 }
