--- a/src/app/templates/components/hobbies/hobbies.component.css
+++ b/src/app/templates/components/hobbies/hobbies.component.css
@@ -177,11 +177,13 @@
     flex-direction: column;
     padding: 20px;
     width: 100%;
-    background: linear-gradient(to bottom, 
-                rgba(255, 255, 255, 0.9) 0%,
-                rgba(140, 140, 140, 0.9) calc(100% - 200px), 
-                transparent 100%),
-                url(/assets/images/backgrounds/notes-musique-tableau-flou-3.jpg);
+    background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.9) 0%,
+        rgba(140, 140, 140, 0.9) calc(100% - 200px),
+        transparent 100%
+      ),
+      url(/assets/images/backgrounds/notes-musique-tableau-flou-3.jpg);
     background-size: cover;
     background-position: center;
   }
@@ -211,5 +213,17 @@
   .piano {
     height: auto;
     width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  @media (orientation: landscape) {
+    .piano {
+      height: 50vw;
+    }
+
+    .hobbie-element {
+      padding: 12px;
+    }
   }
 }
