--- a/src/app/templates/components/terminal/terminal.component.css
+++ b/src/app/templates/components/terminal/terminal.component.css
@@ -153,3 +153,41 @@
     font-size: 0.9rem;
   }
 }
+
+@media (max-width: 1024px) {
+  @media (orientation: landscape) {
+    .terminal-container {
+      width: 60vw;
+      margin: 0;
+    }
+
+    .terminal-header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .terminal-buttons {
+      margin-bottom: 10px;
+    }
+
+    .terminal-text {
+      font-size: 1rem;
+    }
+
+    .terminal-input {
+      font-size: 0.9rem;
+    }
+
+    .terminal-prompt {
+      font-size: 0.9rem;
+    }
+
+    .terminal-cursor {
+      height: 1.5em;
+    }
+
+    .terminal-input-container {
+      font-size: 1.2rem;
+    }
+  }
+}
