--- a/src/app/templates/components/terminal/terminal.component.html
+++ b/src/app/templates/components/terminal/terminal.component.html
@@ -13,7 +13,7 @@
       <p class="terminal-text white">+ missclick&#64;07.11.04
         added 1 package, and audited 2 packages in 3s</p>
       <br>
-      <br>
+      <br class="desktop-only">
       <p class="terminal-text grey">Explore my work and let's connect!</p>
       <br>
       <div class="terminal-input-container">
