--- a/src/app/templates/pages/home/home.component.html
+++ b/src/app/templates/pages/home/home.component.html
@@ -19,4 +19,8 @@
   <section id="github-stats" class="github-stats">
     <app-github-stats></app-github-stats>
   </section>
+
+  <section id="projects-cta" class="projects-cta">
+    <app-projects-cta></app-projects-cta>
+  </section>
 </div>
